--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta name="" content="">
-  <title>RTDC</title>
+  <title>RTDC
+</title>
 
   <!-- CSS only -->
 
@@ -22,6 +23,10 @@
   <br />
   <nav>
     <div class="nav nav-tabs" id="nav-tab" role="tablist">
+  <!--    Button trigger modal -->
+     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" id="loginBtn">
+       <i class="fas fa-user-circle"></i> Login
+     </button>
       <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true"><i class="fas fa-home"></i> Home</button>
       <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false"><i class="fas fa-globe-asia"></i> Explore</button>
       <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false"><i class="fas fa-address-book"></i> Contact</button>
@@ -29,10 +34,6 @@
       <!-- this is rtdc and awewa logo -->
      <!--  <h6 class="topLogo">RTDC<span class="fo"> from </span>awewa</h6> -->
       
-  <!--    Button trigger modal -->
-     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" id="loginBtn">
-       <i class="fas fa-user-circle"></i> Login
-     </button>
 
       <!-- Modal -->
       <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -51,7 +52,7 @@
             </div>
           </div>
         </div>
-      </div>
+       </div>
     </div>
   </nav>
   <div class="tab-content" id="nav-tabContent">
