--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
   </nav>
   <div class="tab-content" id="nav-tabContent">
     <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+      <!-- This is home page start -->
+      <br />
       <img class="rtdc-cover" src="./rtdc-cover.png" alt="rtdc-cover" />
       
     </div>
@@ -78,7 +80,8 @@
       ...
     </div>
     <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
-      ...
+      <br />
+      <img class="contact-cover" src="./contact-cover.png" alt="contact-cover" />
     </div>
   </div>
 
