--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Sign In & Sign Out</h5>
+              <h5 class="modal-title" id="exampleModalLabel">Sign In & Sign Up</h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -57,12 +57,13 @@
     <input type="checkbox" class="form-check-input" id="exampleCheck1">
     <label class="form-check-label" for="exampleCheck1">Check me out</label>
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary">Login</button>
 </form>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
+              <button type="button" class="btn btn-secondary" id="forget-password">Forget password</button>
+              <p>or</p>
+              <button type="button" class="btn btn-primary" id="creat-new-account">Creat New Account</button>
             </div>
           </div>
         </div>
