--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true"><i class="fas fa-home"></i> Home</button>
       <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false"><i class="fas fa-globe-asia"></i> Explore</button>
       <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false"><i class="fas fa-address-book"></i> Contact</button>
-      
+      <h6 class="text">Power by</h6>
 <img class="awewaylogo" src="./awewalogo.png" alt="logo" />
       <!-- this is rtdc and awewa logo -->
      <!--  <h6 class="topLogo">RTDC<span class="fo"> from </span>awewa</h6> -->
