--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
     <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
       <br />
       <img class="contact-cover" src="./contact-cover.png" alt="contact-cover" />
+      <h4 class="pragraph">Rekhine Technological Deployment Center - RTDC မိတ်ဆက်</h4>
+      <p class="pragraph">Rekhine Technological Deployment Center - RTDC ကို May 28 2021 တွင် ရခိုင့် နည်းပညာကျောင်းသားများ မှ ရခိုင့် အမျိုးသား ဖွံ့ဖြိုးတိုး တက်ရေးကို မျှော်မှန်းလျှက် (NGO) အစိုးရ မဟုတ်သော အဖွဲ့အစည်း များနှင့် ချိတ်ဆက်၍ ဖွဲ့စည်းတည်ထောင်ခဲ့ပါသည်။
+
+Rekhine Technological Deployment Center ဟူ၍ အမည်ပေးရာတွင် ရခိုင်ဟူသော ဝေါ်ဟာရအား ပုံမှန်ရေးသားနေကြ ပုံစံအတိုင်း "Rakhine" ဟူသော အသုံးအနုန်းအား မသုံးဘဲ ရခိုင်လူမျိုးများ၏ အာရင်းအာသံ ကိုသာ အသုံးပြုလိုသောကြောင်း "Rekhine" ဟူ၍ သုံးနုန်း အမည်ပေးခဲ့ခြင်း ဖြစ်ပါသည်။
+
+ရခိုင်လူမျိုးများ အလုပ်အကိုင် အခွင့်အလမ်းများ ရရှိနိင်ရေး ဦးတည် ရည်ရွယ်လျှက် ဆက်စပ်နိင် သမျှသော သင်တန်းများနှင့် အလုပ်အကိုင် အခွင့်အလမ်းများအား ဖန်တီးပေးခြင်း၊ လမ်းညွှန်ပေးခြင်းများ ပြုလုပ်နိင်ရန် စီစဉ်လျှက် ရှိပါသည်။
+
+ရခိုင်တစ်ပြည်လုံးရှိ လုပ်ငန်းများ အားလုံး နှင့် ဆက်သွယ်နိုင်ရန် ကြိုးပန်းလျှက်ရှိပြီး အခြားလုပ်ငန်းသစ်များ ပေါ်ပေါက်လာရေးကို လည်း အလေးထားကာ အခွင့်အလမ်း သစ်များ ရရှိနိင်ရေး လုပ်ဆောင်ချက်များ ကို အစွမ်းကို ကြိုးပမ်းလျှက် ရှိပါသည်။
+</p>
     </div>
   </div>
 
