--- a/index.html
+++ b/index.html
@@ -78,7 +78,19 @@
       
     </div>
     <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
-      ...
+      <br />
+      <div class="llc-frame">
+        <div class="llc-logo-frame">
+      <img class="llc-logo" src="./LLC.png" alt="llc-logo" />
+          <h3><a href="https://www.facebook.com/llclearninglanguagescenter/"> LLC - Learning Langue Center</a></h3>
+      <br />
+        </div>
+<video id="llc-video-poster" width="100%" height="100%" controls autoplay="4.0">
+  <source src="./llc-poster.mp4" type="video/mp4">
+  <source src="movie.ogg" type="video/ogg">
+  Your browser does not support the video tag.
+</video>
+      </div>
     </div>
     <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
       <br />
