--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
   <!-- CSS only -->
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="./boostrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
   <!-- this is fontaswesome link -->
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+  <link rel="stylesheet" href="./fontawsome.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 
   <!-- this is own css link -->
   <link rel="stylesheet" href="./style.css" type="text/css" media="all" />
@@ -79,19 +79,67 @@
     </div>
     <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
       <br />
-      <div class="llc-frame">
-        <div class="llc-logo-frame">
-      <img class="llc-logo" src="./LLC.png" alt="llc-logo" />
-          <h3><a href="https://www.facebook.com/llclearninglanguagescenter/"> LLC - Learning Langue Center</a></h3>
-      <br />
-        </div>
-<video id="llc-video-poster" width="100%" height="100%" controls autoplay="4.0">
+      <div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="./LLC.png" class="img-fluid rounded-start" alt="llc-logo">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="./2so-logo.png" class="img-fluid rounded-start" alt="2so-logo">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="./awewa.png" class="img-fluid rounded-start" alt="awewa-logo">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
+  </div>
+</div>
+      <!-- <div class="card">
+  <div class="card-body">
+    <div class="llc-frame">
+      <div class="llc-logo-frame">
+    <img class="llc-logo" src="./LLC.png" alt="llc-logo" />
+    <br />
+      </div>
+  <video id="llc-video-poster" width="100%" height="100%" controls autoplay="4.0">
   <source src="./llc-poster.mp4" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
   Your browser does not support the video tag.
-</video>
-      </div>
+  </video>
     </div>
+  
+    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <a href="https://www.facebook.com/llclearninglanguagescenter/" class="btn btn-primary">LLC - Learning Langue Center</a>
+  </div>
+  </div> -->
+</div>
     <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
       <br />
       <img class="contact-cover" src="./contact-cover.png" alt="contact-cover" />
@@ -108,7 +156,7 @@ Rekhine Technological Deployment Center ဟူ၍ အမည်ပေးရာတ
   </div>
 
   <!-- JavaScript Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="./bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="./script.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
